--- a/Frontend/Healthsync/src/index.css
+++ b/Frontend/Healthsync/src/index.css
@@ -4,7 +4,8 @@
 
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
+  @apply bg-slate-500;
+  /* line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
@@ -14,7 +15,7 @@
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  -moz-osx-font-smoothing: grayscale; */
 }
 
 a {
