--- a/Frontend/Healthsync/src/index.css
+++ b/Frontend/Healthsync/src/index.css
@@ -20,11 +20,10 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  @apply text-blue;
 }
 
 body {
@@ -52,7 +51,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  @apply bg-blue;
 }
 button:focus,
 button:focus-visible {
@@ -64,10 +63,11 @@ button:focus-visible {
     color: #213547;
     background-color: #ffffff;
   }
-  a:hover {
-    color: #747bff;
-  }
   button {
     background-color: #f9f9f9;
   }
+}
+
+.navButton {
+  @apply py-4 rounded-lg;
 }
